2008-03-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-protocols)
	(auth-source-protocols-customize, auth-source-choices): Added and
	modified variable customizations and defaults.
	(auth-source-pick, auth-source-user-or-password)
	(auth-source-protocol-defaults, auth-source-user-or-password-imap)
	(auth-source-user-or-password-pop3, auth-source-user-or-password-ssh)
	(auth-source-user-or-password-sftp)
	(auth-source-user-or-password-smtp): Use new variables and provide an
	interface to netrc.el.

2008-03-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-open-telnet-stream, nntp-open-via-rlogin-and-telnet)
	(nntp-open-via-rlogin-and-netcat, nntp-open-via-telnet-and-telnet):
	Make sure the nntp port to specify is a string.

2008-03-10  Daiki Ueno  <ueno@unixuser.org>

	* mml2015.el (mml2015-epg-passphrase-callback): Type cast KEY-ID to a
	string for caching if it is 'PIN.

2008-03-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Consider the case without Emacs/W3.

2008-03-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* mail-source.el (mail-source-delete-old-incoming-confirm): Change
	default to nil.
	(mail-source-delete-old-incoming): Make confirmation prompt more clear.

2008-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Rearrange.

	* gnus-art.el (gnus-narrow-to-page): Position point properly.
	(gnus-article-goto-prev-page): Work for articles having ^L's.

	* gnus-sum.el (gnus-summary-end-of-article): Remove needless narrowing.

	* mm-view.el (mm-w3m-standalone-supports-m17n-p): Fix typo.

2008-03-06  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: New package.
	(auth-source-choices): Add customization entry point variable.

	* gnus-registry.el (gnus-registry-user-format-function-M): Fix concat
	bug.

2008-03-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-install): Allow 'ask as an option.
	(gnus-registry-initialize, gnus-registry-install-p): Use it.